[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Arcade/ARCADE_N.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Bag.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Bag/Images/bag.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Bag" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Label_Bag" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.788235, 0.721569, 0.494118, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Label_Items" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.788235, 0.721569, 0.494118, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Label_Items_2" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.788235, 0.721569, 0.494118, 1 )
custom_fonts/font = SubResource( 1 )

[node name="Label_Controls" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 17.0
custom_colors/font_color = Color( 0.788235, 0.721569, 0.494118, 1 )
custom_fonts/font = SubResource( 1 )
